# email-notifications

./: Cargo.toml  flake.nix  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
crates/email_notifications_types/src/: lib.rs
provider/: default.nix
provider/app/: happ.nix  happ.yaml
provider/dnas/email_notifications_bridge/: dna.nix
provider/dnas/email_notifications_bridge/workdir/: dna.yaml
provider/dnas/email_notifications_bridge/zomes/coordinator/email_notifications_bridge/: zome.nix
provider/dnas/email_notifications_provider/: dna.nix
provider/dnas/email_notifications_provider/workdir/: dna.yaml
provider/dnas/email_notifications_provider/zomes/coordinator/email_notifications_provider/: zome.nix
provider/dnas/email_notifications_provider/zomes/coordinator/email_notifications_provider/src/: email_credentials.rs  lib.rs
provider/dnas/email_notifications_provider/zomes/integrity/email_notifications_provider/: zome.nix
provider/runner/: Cargo.toml  runner.nix
provider/runner/src/: launch.rs  main.rs
service/: dna.nix
service/zomes/coordinator/email_notifications_service/: zome.nix
service/zomes/integrity/email_notifications_service/: zome.nix
tests/: package.json  tests.nix  vitest.config.ts
tests/fixture/: dna.yaml  fixture.nix  happ.yaml
tests/src/: email-service.test.ts
